[PLAY-555] Fixed Body Content disappearing behind Footer for Dialog (#2283)
* Fixed issue with body content disappearing behind footer

* Using pseudo div instead of padding to fix issue

--- a/playbook/app/pb_kits/playbook/pb_dialog/_dialog.scss
+++ b/playbook/app/pb_kits/playbook/pb_dialog/_dialog.scss
@@ -227,6 +227,11 @@
 				height: 100%;
 				max-height: 100%;
 				max-width: none;
+				//this empty div only has height when dialog is full height. 
+				//fix for dialog body content disappearing behind sticky footer
+				.dialog-pseudo-footer {
+					height: $space_xl * 2;
+				}
 				.dialog_footer {
 					position:fixed;
 					bottom: 0;
@@ -287,6 +292,11 @@
 			height: 100% !important;
 			max-height: 100% !important;
 			max-width: 100%;
+			//this empty div only has height when dialog is full height. 
+			//fix for dialog body content disappearing behind sticky footer
+			.dialog-pseudo-footer {
+				height: $space_xl * 2;
+			}
 			.dialog_footer {
 				position:fixed;
 				bottom: 0;
